[package]
name = "nabi-runtime"
description = "Runtime core for Nabi: scheduler, workers, tasks, timers, sync primitives"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nabisys/nabi"
homepage = "https://nabi.run"
readme = "README.md"
keywords = ["async", "runtime", "nabi", "scheduler", "task"]
categories = ["asynchronous", "concurrency"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin",
]

[dependencies]
nabi-core.workspace = true
nabi-io.workspace = true
crossbeam-deque.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_Console",
  "Win32_System_ProcessStatus",
  "Win32_System_Diagnostics_Debug",
] }

# loom is only linked when `RUSTFLAGS="--cfg loom"` is set. Production builds
# never depend on it.
[target.'cfg(loom)'.dependencies]
loom.workspace = true

[dev-dependencies]
nabi-test.workspace = true
proptest.workspace = true

[lints]
workspace = true
