[package]
name = "nabi-tls"
description = "TLS for Nabi: rustls and native-tls backends"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nabisys/nabi"
homepage = "https://nabi.run"
readme = "README.md"
keywords = ["async", "runtime", "nabi", "tls", "rustls"]
categories = ["asynchronous", "cryptography", "network-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin",
]

[features]
default = ["rustls"]
rustls = ["dep:rustls", "dep:rustls-pki-types", "dep:webpki-roots"]
native-tls = ["dep:native-tls"]

[dependencies]
nabi-core.workspace = true
nabi-io.workspace = true
nabi-net.workspace = true

rustls = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
native-tls = { workspace = true, optional = true }

[dev-dependencies]
nabi-test.workspace = true

[lints]
workspace = true
